--- a/css/style.css
+++ b/css/style.css
@@ -1648,6 +1648,11 @@ input[type=checkbox] {
 	.dropdown-menu li a{
 		text-align: left !important;
 	}
+	.dropdown-menu li a:hover{
+		background-color: #3B5998 !important;
+		opacity: 0.8;
+		color: #fff !important;
+	}
 	/* .sidenav li{
 		display: inline-flex;
 		padding-left: 14px;
@@ -1739,4 +1744,12 @@ p.scrolldown {
     border: 4px solid #4587d9;
     width: 100% !important;
     height: 400px !important;
+  }
+  .menutop{
+	top: 215px !important;
+  }
+  .ulpad{
+	list-style: inherit !important;
+	color: #5b5b5b;
+	padding-left: 15px;
   }
