--- a/css/style.css
+++ b/css/style.css
@@ -1547,7 +1547,8 @@ input[type=checkbox] {
   .styl{
 	background-color: #3B5998;
     color: #fff;
-    opacity: 0.8;
+	opacity: 0.8;
+	font-weight: 900;
   }
   .styl:hover{
 	  color: #fff !important;
