--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ nav.navbar.bootsnav.no-full .navbar-collapse.in {
 }
 /*arrows Slider*/
 .tparrows{
-	display: none;
+	/* display: none; */
   background:#ffb600 !important;
   -webkit-border-radius:100%;
   border-radius:4px;
